// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form component > should render default form variant 1`] = `
<DocumentFragment>
  <form
    class="pf-v5-c-form"
    novalidate=""
  />
</DocumentFragment>
`;

exports[`Form component > should render form with limited width 1`] = `
<DocumentFragment>
  <form
    class="pf-v5-c-form pf-m-limit-width"
    novalidate=""
  />
</DocumentFragment>
`;

exports[`Form component > should render horizontal form variant 1`] = `
<DocumentFragment>
  <form
    class="pf-v5-c-form pf-m-horizontal"
    novalidate=""
  />
</DocumentFragment>
`;
